packages/example/content/boomerang-cicd/7.0.0/getting-to-know/03.pipelines.md
---
title: Pipelines
index: 03
---

# Pipelines

The other key engine room of Boomerang CICD. Pipelines wire together Stages, and in turn, Stages dictate what and how an activity is run. Without pipelines and stages, components do not do anything.

## Stage Actions

You can view and perform actions on any stage which are visible at the bottom of each stage card. Actions currently include:
- _promote_ - Promote artifacts from one stage to another. In the case of mobile applications, when promoting to the next stage, Boomerang CI will recompile the artifact using the configuration for that stage.
- _run activity_ - Platform admins are able to run a 

## Stage Configuration

You can configure the stages in a pipeline by clicking on the stage cards cog and selecting 'Configure Stage'.

A modal will appear allowing you to set notifications and what happens for build, test, and deploy activities. These essentially set Stage level properties.

## Stage Gates

You can configure the gates activity for a stage by clicking on the stage cards cog and selecting 'Configure Gates'

A modal will appear allowing you to select what Bosun Policies you want to enable and validate against.
